Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignNumberBoolObj.quorum
class Main
    action Main
        number v = Test()
    end

    action Test() returns number
        Boolean var
        var:SetValue(true)
        return var
    end
end